# cpp_dbc

./: .build_env.temp  .dist_build  .env_dist  .env_dist.temp  .gitignore  .sonarcloud.properties  CHANGELOG.md  CMakeLists.txt  EXCEPTION_FREE_ANALYSIS.md  LICENSE.md  QUICKSTART.md  README.md  TODO.md  build.dist.sh  build.sh  check_dbexception_codes.sh  compile_commands.json  conanfile.txt  dockerfile.dist  generate_dbexception_code.sh  helper.sh  list_class.sh  list_class_usage.sh  list_public_methods.sh  manage_valgrind.sh  run_test.sh  run_test_parallel.sh  sonar-project.properties  sonar_qube_issues_fetch.sh  test_coverage.sh  update_extern.sh  update_headers.sh
libs/cpp_dbc/: CMakeLists.txt  CMakeUserPresets.json  build_cpp_dbc.sh  build_dist_deb.sh  build_dist_pkg.sh  build_test_cpp_dbc.sh  compare_benchmark_cpp_dbc_base_line.sh  conanfile.txt  create_benchmark_cpp_dbc_base_line.sh  download_and_setup_cassandra_driver.sh  generate_build_config.sh  run_benchmarks_cpp_dbc.sh  run_examples.sh  run_test_cpp_dbc.sh  valgrind-suppressions.txt
libs/cpp_dbc/benchmark/: CMakeLists.txt  benchmark_common.cpp  benchmark_common.hpp  benchmark_db_connections.yml  benchmark_firebird_delete.cpp  benchmark_firebird_insert.cpp  benchmark_firebird_select.cpp  benchmark_firebird_update.cpp  benchmark_main.cpp  benchmark_mongodb_delete.cpp  benchmark_mongodb_insert.cpp  benchmark_mongodb_select.cpp  benchmark_mongodb_update.cpp  benchmark_mysql_delete.cpp  benchmark_mysql_insert.cpp  benchmark_mysql_select.cpp  benchmark_mysql_update.cpp  benchmark_postgresql_delete.cpp  benchmark_postgresql_insert.cpp  benchmark_postgresql_select.cpp  benchmark_postgresql_update.cpp  benchmark_redis_delete.cpp  benchmark_redis_insert.cpp  benchmark_redis_select.cpp  benchmark_redis_update.cpp  benchmark_scylladb_delete.cpp  benchmark_scylladb_insert.cpp  benchmark_scylladb_select.cpp  benchmark_scylladb_update.cpp  benchmark_sqlite_delete.cpp  benchmark_sqlite_insert.cpp  benchmark_sqlite_select.cpp  benchmark_sqlite_update.cpp
libs/cpp_dbc/cmake/: FindCPPDBC.cmake  FindCassandra.cmake  FindFirebird.cmake  FindHiredis.cmake  FindMongoDB.cmake  FindMySQL.cmake  FindPostgreSQL.cmake  FindSQLite3.cmake  cpp_dbc-config-version.cmake  cpp_dbc-config.cmake  cpp_dbc-config.cmake.in
libs/cpp_dbc/distros/debian_12/: Dockerfile  build_script.sh
libs/cpp_dbc/distros/debian_13/: Dockerfile  build_script.sh  mysql_fix.patch
libs/cpp_dbc/distros/fedora_42/: Dockerfile  build_script.sh
libs/cpp_dbc/distros/fedora_43/: Dockerfile  build_script.sh
libs/cpp_dbc/distros/ubuntu_22_04/: Dockerfile  build_script.sh
libs/cpp_dbc/distros/ubuntu_24_04/: Dockerfile  build_script.sh
libs/cpp_dbc/docs/: class_hierarchy.drawio  cmake_usage.md  cppdbc-docs-en.md  cppdbc-docs-es.md  cppdbc-package.md  error_handling_patterns.md  high_perf_logger.md  how_add_new_db_drivers.md  shell_script_dependencies.md
libs/cpp_dbc/docs/bugs/: README.md  firebird_helgrind_analysis.md  firebird_lock_order_deadlock.md
libs/cpp_dbc/docs/example_cmake_project/: CMakeLists.txt  README.md  simple_example.cpp
libs/cpp_dbc/examples/: batch_operations_example.cpp  blob_operations_example.cpp  config_example.cpp  config_integration_example.cpp  connection_info_example.cpp  connection_pool_example.cpp  document_connection_pool_example.cpp  error_handling_example.cpp  example.cpp  example_config.yml  firebird_example.cpp  firebird_reserved_word_example.cpp  join_operations_example.cpp  json_operations_example.cpp  kv_connection_pool_example.cpp  mongodb_example.cpp  redis_example.cpp  run_config_example.sh  run_config_integration_example.sh  scylla_blob_example.cpp  scylla_example.cpp  scylla_json_example.cpp  scylladb_connection_pool_example.cpp  transaction_manager_example.cpp
libs/cpp_dbc/examples/common/: 10_011_example_config.cpp  10_012_example_config_integration.cpp  example_common.hpp  example_config.yml
libs/cpp_dbc/examples/graph/: README.md
libs/cpp_dbc/examples/relational/: example_relational_common.hpp
libs/cpp_dbc/examples/timeseries/: README.md
libs/cpp_dbc/include/cpp_dbc/: blob.hpp  connection_pool.hpp  cpp_dbc.hpp  transaction_manager.hpp
libs/cpp_dbc/src/: connection_pool.cpp  driver_manager.cpp  relational_db_connection_pool.cpp  transaction_manager.cpp
libs/cpp_dbc/src/common/: system_constants.cpp  system_utils.cpp
libs/cpp_dbc/src/config/: database_config.cpp  (+1 more)
libs/cpp_dbc/test/: 10_000_test_main.cpp  10_000_test_main.hpp  10_001_test_database_config.cpp  10_011_test_db_config.cpp  10_021_test_db_connection_pool_config.cpp  10_031_test_db_exception.cpp  10_041_test_expected.cpp  10_051_test_yaml.cpp  10_061_test_integration.cpp  20_001_test_mysql_real_common.cpp  20_001_test_mysql_real_common.hpp  20_011_test_mysql_real_db_config.cpp  20_021_test_mysql_real_driver.cpp  20_031_test_mysql_real.cpp  20_041_test_mysql_real_connection.cpp  20_051_test_mysql_real_json.cpp  20_061_test_mysql_real_blob.cpp  20_071_test_mysql_real_inner_join.cpp  20_081_test_mysql_real_left_join.cpp  20_091_test_mysql_real_right_join.cpp  20_101_test_mysql_real_full_join.cpp  20_111_test_mysql_real_thread_safe.cpp  20_121_test_mysql_real_transaction_isolation.cpp  20_131_test_mysql_real_transaction_manager.cpp  20_141_test_mysql_real_connection_pool.cpp  21_001_test_postgresql_real_common.cpp  21_001_test_postgresql_real_common.hpp  21_011_test_postgresql_real_db_config.cpp  21_021_test_postgresql_real_driver.cpp  21_031_test_postgresql_real.cpp  21_041_test_postgresql_real_connection.cpp  21_061_test_postgresql_real_blob.cpp  21_081_test_postgresql_real_left_join.cpp  21_111_test_postgresql_real_thread_safe.cpp  21_131_test_postgresql_real_transaction_manager.cpp  21_141_test_postgresql_real_connection_pool.cpp  22_001_test_sqlite_real_common.cpp  22_001_test_sqlite_real_common.hpp  22_011_test_sqlite_real_db_config.cpp  22_021_test_sqlite_real_driver.cpp  (+148 more)
src/: main.cpp
src/libs/cpp_dbc/: CMakeLists.txt  build_cpp_dbc.sh  connection_pool.cpp  cpp_dbc.hpp  driver_manager.cpp  transaction_manager.cpp  transaction_manager.hpp
(+431 files in other folders)
